--- a/index.css
+++ b/index.css
@@ -265,11 +265,19 @@ h3 {
   color: var(--text);
 }
 
+.contenedor-hero__subtitle {
+  display: flex;  
+  margin-left: 25%;
+  margin-right: 25%;
+  place-items: center; /* Centra todo en X e Y */
+  
+}
+
 .hero__subtitle {
-  max-width: 70rem;
+  max-width: 80rem;
   color: var(--text-soft);
   display: flex;
-  margin-left: 12%;
+  text-align: center;
   font-size: 1.5rem;
   font-weight: 400;
 }
